# icsc-linux

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac  icsc.pc.in
debian/: changelog  control  copyright  libicsc-dev.install
docs/: Doxyfile.in
examples/ping_sender/: Makefile  ping_sender.c
src/: Makefile.am  gpio.c  icsc.c  icsc.h  serial.c
